--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: "poppins";
   src: url(/src/fonts/Poppins-Light.ttf) format("truetype");
   font-weight: normal;
@@ -21,7 +21,7 @@
   src: url(/src/fonts/YatraOne-Regular.ttf) format("truetype");
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 html {
   scroll-behavior: smooth;
